# point_operations_training

./: README.md  main.py  point_operations_training.py  pyproject.toml
ansible/: playbook.yaml
ansible/roles/launcher/tasks/: main.yaml
ansible/roles/uv/tasks/: main.yaml
point_operations_training/: learn.tcss  timer.py  training.py  training_set.py  tui.py
